# SparkCut

./: .dockerignore  .env.example  .gitignore  PRD.md  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  database.py  db_helpers.py  llm_models.py  main.py  models.py  pipeline.py  prompts.py  schemas.py  serialization.py  services.py  settings.py  storage.py  templates.py  utils.py  worker.py
backend/app/pipeline/: __init__.py  engine.py  explainability.py  ffmpeg.py  llm.py
backend/app/pipeline/stages/: analysis.py  asr.py  compose.py  package.py  probe.py  review.py
backend/app/routers/: jobs.py  settings.py  templates.py  workspaces.py
backend/scripts/: run_whisper_base.py
backend/tests/: test_api.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: DEPLOYMENT_DOCKER.md  ITERATION_TEST_FLOW.md  TEST_CASES.md  llm-prompts.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  appConfig.ts  styles.css  types.ts
frontend/src/components/: ExplainabilityPanel.tsx  InputSnapshot.tsx  JobConfigForm.tsx  JobHistoryPanel.tsx  JobProgressPanel.tsx  LogPanel.tsx  ResultsPanel.tsx  SettingsModal.tsx  TemplateSelect.tsx  VideoUploadSection.tsx  WorkbenchView.tsx  WorkspaceCreateModal.tsx  WorkspaceListView.tsx
frontend/src/components/fields/: ModelField.tsx  NumberField.tsx  SelectField.tsx  TextArea.tsx
frontend/src/hooks/: useJobConfig.ts  usePipeline.ts  useSettings.ts  useSparkCutController.ts  useTemplates.ts
